# cmake-deps-problem

./: README.md  build.sh
example1/: CMakeLists.txt  lib.cpp
example1/include/: example1.h
example2/: CMakeLists.txt  lib.cpp
example2/include/: example2.h
example3/: CMakeLists.txt  main.cpp
exampleA/: CMakeLists.txt  main.cpp
exampleB/: CMakeLists.txt  lib.cpp
exampleB/include/: exampleB.h
exampleC/: CMakeLists.txt  lib.cpp
exampleC/include/: exampleC.h
